// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserNotifications should render correctly when 0 notif 1`] = `
.c0 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin-top: 26px;
  margin-right: 120px;
  margin-left: 120px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c2 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c1 {
  color: #5e5e5e;
  margin-top: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  style={
    {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        Aucune notification ! 
      </div>
      <div
        style={
          {
            "marginBottom": "20px",
            "marginTop": "32px",
          }
        }
      >
        <img
          alt="no-notification"
          data-nimg="1"
          decoding="async"
          height={289}
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="https://storage.googleapis.com/refugies-info-assets/middle-office/aucune_notification.svg"
          style={
            {
              "color": "transparent",
            }
          }
          width={400}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`UserNotifications should render correctly when loading 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c3 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c2 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c0 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin-top: 26px;
  margin-right: 120px;
  margin-left: 120px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<div
  style={
    {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        Vous avez
      </div>
      <div
        className="c3"
      >
        ...
      </div>
      <div
        className="c2"
      >
        nouvelle notification.
      </div>
    </div>
    <span
      aria-busy={true}
      aria-live="polite"
    >
      <span
        className="react-loading-skeleton"
        style={
          {
            "height": 50,
          }
        }
      >
        ‌
      </span>
      <br />
      <span
        className="react-loading-skeleton"
        style={
          {
            "height": 50,
          }
        }
      >
        ‌
      </span>
      <br />
      <span
        className="react-loading-skeleton"
        style={
          {
            "height": 50,
          }
        }
      >
        ‌
      </span>
      <br />
    </span>
  </div>
</div>
`;

exports[`UserNotifications should render correctly when notif not read annuaire, not read reaction, not read new content, read reaction  1`] = `
.c4 {
  background: #2d9cdb;
  border-radius: 12px;
  padding: 8px 8px 8px 20px;
  margin: 8px 0px 0px 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
  border-width: 2px;
  border-style: solid;
  border-color: #2d9cdb;
}

.c4:hover {
  border-color: #212121;
}

.c9 {
  background: #ffffff;
  border-radius: 12px;
  padding: 8px 8px 8px 20px;
  margin: 8px 0px 0px 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
  border-width: 2px;
  border-style: solid;
  border-color: #ffffff;
}

.c9:hover {
  border-color: #212121;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  font-weight: bold;
  font-size: 18px;
  line-height: 23px;
  color: #ffffff;
  margin-left: 20px;
}

.c10 {
  font-weight: bold;
  font-size: 18px;
  line-height: 23px;
  color: #212121;
  margin-left: 20px;
}

.c8 {
  background: #edebeb;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 18px;
  line-height: 23px;
  margin-left: 8px;
}

.c7 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #ffffff;
  margin-right: 8px;
  margin-left: 8px;
}

.c11 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #f44336;
  margin-right: 8px;
  margin-left: 8px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c3 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c2 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c0 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin-top: 26px;
  margin-right: 120px;
  margin-left: 120px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<div
  style={
    {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        Vous avez
      </div>
      <div
        className="c3"
      >
        3
      </div>
      <div
        className="c2"
      >
        nouvelles notifications.
      </div>
    </div>
    <div
      className="c4"
      data-test-id="test-notif-annuaire"
      onClick={[Function]}
    >
      <div
        className="c5"
      >
        <span
          className="icon"
        >
          <i
            dangerouslySetInnerHTML={
              {
                "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-bell" fill="#ffffff"><g data-name="Layer 2"><g data-name="bell"><rect width="24" height="24" opacity="0"/><path d="M20.52 15.21l-1.8-1.81V8.94a6.86 6.86 0 0 0-5.82-6.88 6.74 6.74 0 0 0-7.62 6.67v4.67l-1.8 1.81A1.64 1.64 0 0 0 4.64 18H8v.34A3.84 3.84 0 0 0 12 22a3.84 3.84 0 0 0 4-3.66V18h3.36a1.64 1.64 0 0 0 1.16-2.79zM14 18.34A1.88 1.88 0 0 1 12 20a1.88 1.88 0 0 1-2-1.66V18h4z"/></g></g></svg>",
              }
            }
            style={
              {
                "height": "20px",
                "lineHeight": "20px",
              }
            }
          />
        </span>
        <div
          className="c6"
        >
          Recensez votre structure dans l'annuaire de l'intégration
        </div>
      </div>
      <div
        className="c5"
      >
        <button
          className="btn dark me-2"
        >
          <span
            className="me-2 icon"
          >
            <i
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-folder-add-outline" fill="#fff"><g data-name="Layer 2"><g data-name="folder-add"><rect width="24" height="24" opacity="0"/><path d="M14 13h-1v-1a1 1 0 0 0-2 0v1h-1a1 1 0 0 0 0 2h1v1a1 1 0 0 0 2 0v-1h1a1 1 0 0 0 0-2z"/><path d="M19.5 7.05h-7L9.87 3.87a1 1 0 0 0-.77-.37H4.5A2.47 2.47 0 0 0 2 5.93v12.14a2.47 2.47 0 0 0 2.5 2.43h15a2.47 2.47 0 0 0 2.5-2.43V9.48a2.47 2.47 0 0 0-2.5-2.43zm.5 11a.46.46 0 0 1-.5.43h-15a.46.46 0 0 1-.5-.43V5.93a.46.46 0 0 1 .5-.43h4.13l2.6 3.18a1 1 0 0 0 .77.37h7.5a.46.46 0 0 1 .5.43z"/></g></g></svg>",
                }
              }
              style={
                {
                  "height": "20px",
                  "lineHeight": "20px",
                }
              }
            />
          </span>
          Compléter la fiche annuaire
        </button>
        <button
          className="btn error ms-2"
          data-test-id="test-delete-annuaire"
          onClick={[Function]}
        >
          <span
            className="icon"
          >
            <i
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-trash-2" fill="#fff"><g data-name="Layer 2"><g data-name="trash-2"><rect width="24" height="24" opacity="0"/><path d="M21 6h-5V4.33A2.42 2.42 0 0 0 13.5 2h-3A2.42 2.42 0 0 0 8 4.33V6H3a1 1 0 0 0 0 2h1v11a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V8h1a1 1 0 0 0 0-2zM10 16a1 1 0 0 1-2 0v-4a1 1 0 0 1 2 0zm0-11.67c0-.16.21-.33.5-.33h3c.29 0 .5.17.5.33V6h-4zM16 16a1 1 0 0 1-2 0v-4a1 1 0 0 1 2 0z"/></g></g></svg>",
                }
              }
              style={
                {
                  "height": "20px",
                  "lineHeight": "20px",
                }
              }
            />
          </span>
        </button>
      </div>
    </div>
    <div
      className="c4"
      data-test-id="test-notif-new content"
      onClick={[Function]}
    >
      <div
        className="c5"
      >
        <span
          className="icon"
        >
          <i
            dangerouslySetInnerHTML={
              {
                "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-bell" fill="#ffffff"><g data-name="Layer 2"><g data-name="bell"><rect width="24" height="24" opacity="0"/><path d="M20.52 15.21l-1.8-1.81V8.94a6.86 6.86 0 0 0-5.82-6.88 6.74 6.74 0 0 0-7.62 6.67v4.67l-1.8 1.81A1.64 1.64 0 0 0 4.64 18H8v.34A3.84 3.84 0 0 0 12 22a3.84 3.84 0 0 0 4-3.66V18h3.36a1.64 1.64 0 0 0 1.16-2.79zM14 18.34A1.88 1.88 0 0 1 12 20a1.88 1.88 0 0 1-2-1.66V18h4z"/></g></g></svg>",
              }
            }
            style={
              {
                "height": "20px",
                "lineHeight": "20px",
              }
            }
          />
        </span>
        <div
          className="c6"
        >
          Une nouvelle fiche a été attribuée à votre structure
        </div>
      </div>
      <div
        className="c5"
      >
        <div
          className="c7"
        >
          Depuis 5 jours
        </div>
        <button
          className="btn dark"
        >
          <span
            className="me-2 icon"
          >
            <i
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-eye" fill="#fff"><g data-name="Layer 2"><g data-name="eye"><rect width="24" height="24" opacity="0"/><circle cx="12" cy="12" r="1.5"/><path d="M21.87 11.5c-.64-1.11-4.16-6.68-10.14-6.5-5.53.14-8.73 5-9.6 6.5a1 1 0 0 0 0 1c.63 1.09 4 6.5 9.89 6.5h.25c5.53-.14 8.74-5 9.6-6.5a1 1 0 0 0 0-1zm-9.87 4a3.5 3.5 0 1 1 3.5-3.5 3.5 3.5 0 0 1-3.5 3.5z"/></g></g></svg>",
                }
              }
              style={
                {
                  "height": "20px",
                  "lineHeight": "20px",
                }
              }
            />
          </span>
          Voir la fiche
        </button>
      </div>
    </div>
    <div
      className="c4"
      data-test-id="test-notif-reaction"
      onClick={[Function]}
    >
      <div
        className="c5"
      >
        <span
          className="icon"
        >
          <i
            dangerouslySetInnerHTML={
              {
                "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-bell" fill="#ffffff"><g data-name="Layer 2"><g data-name="bell"><rect width="24" height="24" opacity="0"/><path d="M20.52 15.21l-1.8-1.81V8.94a6.86 6.86 0 0 0-5.82-6.88 6.74 6.74 0 0 0-7.62 6.67v4.67l-1.8 1.81A1.64 1.64 0 0 0 4.64 18H8v.34A3.84 3.84 0 0 0 12 22a3.84 3.84 0 0 0 4-3.66V18h3.36a1.64 1.64 0 0 0 1.16-2.79zM14 18.34A1.88 1.88 0 0 1 12 20a1.88 1.88 0 0 1-2-1.66V18h4z"/></g></g></svg>",
              }
            }
            style={
              {
                "height": "20px",
                "lineHeight": "20px",
              }
            }
          />
        </span>
        <div
          className="c6"
        >
          Nouvelle réaction sur la fiche :
        </div>
        <div
          className="c8"
        >
          titre info
        </div>
      </div>
      <div
        className="c5"
      >
        <div
          className="c7"
        >
          Depuis 5 jours
        </div>
        <button
          className="btn dark"
        >
          <span
            className="me-2 icon"
          >
            <i
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-eye" fill="#fff"><g data-name="Layer 2"><g data-name="eye"><rect width="24" height="24" opacity="0"/><circle cx="12" cy="12" r="1.5"/><path d="M21.87 11.5c-.64-1.11-4.16-6.68-10.14-6.5-5.53.14-8.73 5-9.6 6.5a1 1 0 0 0 0 1c.63 1.09 4 6.5 9.89 6.5h.25c5.53-.14 8.74-5 9.6-6.5a1 1 0 0 0 0-1zm-9.87 4a3.5 3.5 0 1 1 3.5-3.5 3.5 3.5 0 0 1-3.5 3.5z"/></g></g></svg>",
                }
              }
              style={
                {
                  "height": "20px",
                  "lineHeight": "20px",
                }
              }
            />
          </span>
          Voir la réaction
        </button>
        <button
          className="btn error ms-2"
          data-test-id="test-delete-reaction"
          onClick={[Function]}
        >
          <span
            className="icon"
          >
            <i
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-trash-2" fill="#fff"><g data-name="Layer 2"><g data-name="trash-2"><rect width="24" height="24" opacity="0"/><path d="M21 6h-5V4.33A2.42 2.42 0 0 0 13.5 2h-3A2.42 2.42 0 0 0 8 4.33V6H3a1 1 0 0 0 0 2h1v11a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V8h1a1 1 0 0 0 0-2zM10 16a1 1 0 0 1-2 0v-4a1 1 0 0 1 2 0zm0-11.67c0-.16.21-.33.5-.33h3c.29 0 .5.17.5.33V6h-4zM16 16a1 1 0 0 1-2 0v-4a1 1 0 0 1 2 0z"/></g></g></svg>",
                }
              }
              style={
                {
                  "height": "20px",
                  "lineHeight": "20px",
                }
              }
            />
          </span>
        </button>
      </div>
    </div>
    <div
      className="c9"
      data-test-id="test-notif-reaction"
      onClick={[Function]}
    >
      <div
        className="c5"
      >
        <span
          className="icon"
        >
          <i
            dangerouslySetInnerHTML={
              {
                "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-bell-outline" fill="#212121"><g data-name="Layer 2"><g data-name="bell"><rect width="24" height="24" opacity="0"/><path d="M20.52 15.21l-1.8-1.81V8.94a6.86 6.86 0 0 0-5.82-6.88 6.74 6.74 0 0 0-7.62 6.67v4.67l-1.8 1.81A1.64 1.64 0 0 0 4.64 18H8v.34A3.84 3.84 0 0 0 12 22a3.84 3.84 0 0 0 4-3.66V18h3.36a1.64 1.64 0 0 0 1.16-2.79zM14 18.34A1.88 1.88 0 0 1 12 20a1.88 1.88 0 0 1-2-1.66V18h4zM5.51 16l1.18-1.18a2 2 0 0 0 .59-1.42V8.73A4.73 4.73 0 0 1 8.9 5.17 4.67 4.67 0 0 1 12.64 4a4.86 4.86 0 0 1 4.08 4.9v4.5a2 2 0 0 0 .58 1.42L18.49 16z"/></g></g></svg>",
              }
            }
            style={
              {
                "height": "20px",
                "lineHeight": "20px",
              }
            }
          />
        </span>
        <div
          className="c10"
        >
          Nouvelle réaction sur la fiche :
        </div>
        <div
          className="c8"
        >
          titre info2
        </div>
      </div>
      <div
        className="c5"
      >
        <div
          className="c11"
        >
          Depuis 5 jours
        </div>
        <button
          className="btn dark"
        >
          <span
            className="me-2 icon"
          >
            <i
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-eye" fill="#fff"><g data-name="Layer 2"><g data-name="eye"><rect width="24" height="24" opacity="0"/><circle cx="12" cy="12" r="1.5"/><path d="M21.87 11.5c-.64-1.11-4.16-6.68-10.14-6.5-5.53.14-8.73 5-9.6 6.5a1 1 0 0 0 0 1c.63 1.09 4 6.5 9.89 6.5h.25c5.53-.14 8.74-5 9.6-6.5a1 1 0 0 0 0-1zm-9.87 4a3.5 3.5 0 1 1 3.5-3.5 3.5 3.5 0 0 1-3.5 3.5z"/></g></g></svg>",
                }
              }
              style={
                {
                  "height": "20px",
                  "lineHeight": "20px",
                }
              }
            />
          </span>
          Voir la réaction
        </button>
        <button
          className="btn error ms-2"
          data-test-id="test-delete-reaction"
          onClick={[Function]}
        >
          <span
            className="icon"
          >
            <i
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-trash-2" fill="#fff"><g data-name="Layer 2"><g data-name="trash-2"><rect width="24" height="24" opacity="0"/><path d="M21 6h-5V4.33A2.42 2.42 0 0 0 13.5 2h-3A2.42 2.42 0 0 0 8 4.33V6H3a1 1 0 0 0 0 2h1v11a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V8h1a1 1 0 0 0 0-2zM10 16a1 1 0 0 1-2 0v-4a1 1 0 0 1 2 0zm0-11.67c0-.16.21-.33.5-.33h3c.29 0 .5.17.5.33V6h-4zM16 16a1 1 0 0 1-2 0v-4a1 1 0 0 1 2 0z"/></g></g></svg>",
                }
              }
              style={
                {
                  "height": "20px",
                  "lineHeight": "20px",
                }
              }
            />
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
